# rfdetr_training

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.tmp_lake_test/: data_lake_config.json  image_index.jsonl
.tmp_lake_test/sessions/monitor_from_tesi_test/: session_meta.json
.tmp_lake_test/sessions/monitor_from_tesi_test/annotations/seg/: _annotations.coco.json
.tmp_lake_test2/: data_lake_config.json  image_index.jsonl
.tmp_lake_test2/sessions/monitor_from_tesi_test/: session_meta.json
docs/: ARIA_System_Integration.md  BUNDLE_CONTRACT.md  CONTEXT  DATA_LAKE_DESIGN.md  LABELING_WORKFLOW.md  MoldVision_Predictive_Model_Plan.md  TOOLS.md  TRANSFER_AND_INFERENCE.md
moldvision/: __init__.py  appconfig.py  bundle.py  bundle_runner.py  checkpoints.py  cli.py  cli_handlers.py  coco.py  coco_merge.py  datasets.py  deploy.py  export.py  infer.py  ingest.py  jsonutil.py  label_studio_backend.py  lake.py  lake_label.py  pathutil.py  postprocess.py  publish.py  quantization.py  rfdetr_patches.py  torch_compat.py  train.py  videos.py
moldvision/predictive/: suggestion_bundle.py  trainer.py  training_row_loader.py
rfdetr_training/: __init__.py  bundle.py  bundle_runner.py  checkpoints.py  cli.py  coco.py  datasets.py  deploy.py  export.py  infer.py  ingest.py  model_factory.py  train.py
scripts/: batch_infer.py  commit_from_staging.py  compute_detection_stats.py  create_dataset.py  expand_checkpoint_head.py  infer_helpers.py  infer_image.py  infer_video.py  infer_webcam.py  remap_coco_ids.py  remove_coco_class.py  rfdetrw.py  train.py  visualize_annotations.py  yolo_to_coco.py
tests/: test_finetune_resolve.py  test_gbt_trainer.py  test_predictive_cli.py  test_publish.py  test_suggestion_bundle.py  test_training_row_loader.py
