[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aria-moldvision"
version = "0.1.0"
description = "CLI workspace to create datasets and train defect detection models (ARIA_MoldVision)."
requires-python = ">=3.9"
readme = "README.md"

[project.optional-dependencies]
label-studio = [
    "label-studio-ml>=1.0.9",
    "onnxruntime>=1.16",
    "numpy>=1.24",
    "Pillow>=9.0",
    "opencv-python-headless>=4.8",
]

[project.scripts]
moldvision = "moldvision.cli:main"

[tool.setuptools]
packages = ["moldvision"]

