[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aria-moldvision"
version = "0.1.0"
description = "CLI workspace to create datasets and train defect detection models (ARIA_MoldVision)."
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    # PyTorch must be installed separately first (CUDA variant varies):
    #   pip install torch==2.6.0+cu124 torchvision==0.21.0+cu124 --index-url https://download.pytorch.org/whl/cu124
    "rfdetr==1.5.0",
    "Pillow==12.1.1",
    "numpy==2.2.6",
    "opencv-python==4.13.0.92",
    "onnxruntime-gpu==1.20.1",
    "onnx==1.17.0",
    # rfdetr transitive deps pinned for stability
    "albumentations==1.4.24",
    "albucore==0.0.23",
    "supervision==0.27.0.post2",
    "pycocotools==2.0.11",
    "faster-coco-eval==1.7.2",
]

[project.optional-dependencies]
predictive = [
    "lightgbm>=4.3,<5",
    "onnxmltools>=1.12,<2",
    "skl2onnx>=1.17,<2",
    "scikit-learn>=1.4,<2",
    "numpy>=1.26",
]
label-studio = [
    "label-studio-ml==1.0.9",
    "numpy==2.2.6",
    "Pillow==12.1.1",
    "opencv-python-headless==4.10.0.84",
]

[project.scripts]
moldvision = "moldvision.cli:main"

[tool.setuptools]
packages = ["moldvision"]

